# avEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
CMake/: CMakeLists.txt  CheckGit.cmake  FindBullet.cmake  FindColibri.cmake  FindDetour.cmake  FindEntityX.cmake  FindGoogleMobileAds.cmake  FindGoogleTest.cmake  FindLibSndFile.cmake  FindOgre.cmake  FindOpenALSoft.cmake  FindRLottie.cmake  FindSDL2.cmake  FindSquirrel.cmake  iosbuild.toolchain.cmake
src/: CMakeLists.txt
src/Animation/: AnimationData.h  AnimationInfoBlockUtil.h  AnimationManager.cpp  AnimationManager.h  SequenceAnimationDef.cpp  SequenceAnimationDef.h
src/Animation/Script/: AnimationScriptParser.cpp  AnimationScriptParser.h
src/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioManager.cpp  AudioManager.h  AudioSource.cpp  AudioSource.h  AudioTypes.h
src/Audio/OpenAL/: AudioBufferOpenAL.cpp  AudioBufferOpenAL.h  AudioManagerOpenAL.cpp  AudioManagerOpenAL.h  AudioSourceOpenAL.cpp  AudioSourceOpenAL.h
src/Dialog/: DialogManager.cpp  DialogManager.h  DialogSettings.cpp  DialogSettings.h
src/Dialog/Compiler/: DialogCompiler.cpp  DialogCompiler.h  DialogScriptData.h
src/Dialog/Scripting/: DialogScriptImplementation.cpp  DialogScriptImplementation.h
src/Event/: EventDispatcher.cpp  EventDispatcher.h
src/Event/Events/: AdvertisingEvent.h  ChunkEvent.h  DebuggerToolEvent.h  Event.h  PurchaseEvent.h  SystemEvent.h  TestingEvent.h  WorldEvent.h
src/Gui/: AnimatedLabel.cpp  AnimatedLabel.h  GuiManager.cpp  GuiManager.h  WrappedColibriRenderable.h
src/Gui/Developer/: ImguiBase.cpp  ImguiBase.h
src/Gui/Rect2d/: Rect2d.cpp  Rect2d.h  Rect2dManager.cpp  Rect2dManager.h  Rect2dMovable.cpp  Rect2dMovable.h  Rect2dRenderable.cpp  Rect2dRenderable.h
src/Gui/Texture2d/: MovableTexture.cpp  MovableTexture.h  MovableTextureManager.cpp  MovableTextureManager.h  Rect2dRenderable.cpp  Rect2dRenderable.h  TextureMovable.cpp  TextureMovable.h
src/Input/: Input.cpp  Input.h  InputManager.cpp  InputManager.h  InputPrerequisites.h
src/Logger/: Log.cpp  Log.h  OgreAVLogListener.cpp  OgreAVLogListener.h
src/Scripting/: CallbackScript.cpp  CallbackScript.h  Script.cpp  Script.h  ScriptDataPacker.h  ScriptManager.cpp  ScriptManager.h  ScriptObjectTypeTags.h  ScriptVM.cpp  ScriptVM.h  ScriptingStateManager.cpp  ScriptingStateManager.h  SquirrelDeepCopy.cpp  SquirrelDeepCopy.h  SquirrelHookDispatcher.cpp  SquirrelHookDispatcher.h
src/Scripting/Debugger/: ScriptDebugger.cpp  ScriptDebugger.h
src/Scripting/Event/: ScriptEventManager.cpp  ScriptEventManager.h  SystemEventListenerObjects.cpp  SystemEventListenerObjects.h
src/Scripting/Profiler/: ProfileReport.cpp  ProfileReport.h  ScriptProfiler.cpp  ScriptProfiler.h
src/Scripting/Script/: BaseScript.cpp  BaseScript.h  CallbackScript.cpp  CallbackScript.h  Script.cpp  Script.h
src/Scripting/ScriptNamespace/: AnimationNamespace.cpp  AnimationNamespace.h  AudioNamespace.cpp  AudioNamespace.h  CameraNamespace.cpp  CameraNamespace.h  ComponentNamespace.cpp  ComponentNamespace.h  CompositorNamespace.cpp  CompositorNamespace.h  DataStoreNamespace.cpp  DataStoreNamespace.h  DeveloperNamespace.cpp  DeveloperNamespace.h  DialogSystemNamespace.cpp  DialogSystemNamespace.h  EntityNamespace.cpp  EntityNamespace.h  EventNamespace.cpp  EventNamespace.h  GlobalRegistryNamespace.cpp  GlobalRegistryNamespace.h  GraphicsNamespace.cpp  GraphicsNamespace.h  GuiNamespace.cpp  GuiNamespace.h  HlmsNamespace.cpp  HlmsNamespace.h  InputNamespace.cpp  InputNamespace.h  InputNamespaceConstants.h  LottieNamespace.cpp  LottieNamespace.h  MeshNamespace.cpp  MeshNamespace.h  MiscFunctions.cpp  MiscFunctions.h  MonetisationNamespace.cpp  MonetisationNamespace.h  NavMeshNamespace.cpp  (+33 more)
src/Scripting/scriptNamespace/: CameraNamespace.cpp  MeshNamespace.cpp  MeshNamespace.h  ScriptNamespace.cpp  ScriptNamespace.h  SlotManagerNamespace.cpp  SlotManagerNamespace.h  WorldNamespace.cpp  WorldNamespace.h
src/Serialisation/: SaveHandle.cpp  SaveHandle.h  SerialisationManager.cpp  SerialisationManager.h  SerialiserStringStore.cpp  SerialiserStringStore.h
src/System/: Base.cpp  Base.h  BaseSingleton.cpp  BaseSingleton.h  EngineFlags.cpp  EngineFlags.h  EnginePrerequisites.h  ResourcePathContainer.cpp  ResourcePathContainer.h
src/System/Advertising/: AdManager.cpp  AdManager.h  AdManagerNull.h
src/System/DataStore/: DataStore.cpp  DataStore.h  DataStoreNull.h
src/System/DebugServer/: DebugServer.cpp  DebugServer.h  MainThreadQueue.cpp  MainThreadQueue.h
src/System/FileSystem/: FilePath.cpp  FilePath.h
src/System/Microtransaction/: PurchaseManager.cpp  PurchaseManager.h  PurchaseManagerNull.h
src/System/OgreSetup/: AndroidOgreSetup.h  AndroidSetupHelper.h  LinuxOgreSetup.h  MacOSOgreSetup.h  OgreSetup.h  SetupHelpers.h  WindowsOgreSetup.h  iosOgreSetup.h
src/System/Pause/: PauseDataTypes.h  PauseState.cpp  PauseState.h
src/System/Plugins/: DynLib.cpp  DynLib.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h
src/System/Registry/: ValueRegistry.cpp  ValueRegistry.h
src/System/SystemSetup/: SystemSettings.cpp  SystemSettings.h  SystemSetup.cpp  SystemSetup.h  UserSettings.cpp  UserSettings.h  UserSettingsSetup.cpp  UserSettingsSetup.h
src/System/TestMode/: TestModeManager.cpp  TestModeManager.h
src/System/Timing/: TimerManager.cpp  TimerManager.h  TimerManagerData.h
src/System/Util/: DataPacker.h  DataPool.h  FileSystemHelper.cpp  FileSystemHelper.h  IdString.h  OgreNodeHelper.h  PathUtils.cpp  PathUtils.h  SimpleFileParser.cpp  SimpleFileParser.h  SquirrelFileSystemHelper.cpp  SquirrelFileSystemHelper.h  VersionedDataPool.h  VersionedPtr.h
src/Threading/: Job.h  JobDispatcher.cpp  JobDispatcher.h  JobId.h  TestJob.h  ThreadManager.cpp  ThreadManager.h  Worker.cpp  Worker.h
src/Threading/Jobs/: EntityDeSerialisationJob.h  (+19 more)
src/Window/: GuiInputProcessor.cpp  GuiInputProcessor.h  InputMapper.cpp  InputMapper.h  Window.cpp  Window.h  WindowPrerequisites.h
src/World/: World.cpp  World.h  WorldSingleton.cpp  WorldSingleton.h
test/unit/: CMakeLists.txt
(+508 files in other folders)
